objects/Solution_Taxonomy_Product_Junction__c.object
<CustomObject>
    <description>What it does? Object connecting a solution taxonomy and a product.  Downstream Impact? None. Which Department is Owner? Sales Ops.

Part of the DEMO REQUEST process</description>
    <fields>
        <fullName>Product_Name__c</fullName>
        <description>What it does?  Holds name of product associated with the solution taxonomy.   Downstream Impact?  None.  Which Department is Owner?  Sales Ops.</description>
        <formula>Product__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <description>What it does?  Holds a link between a product and a solution taxonomy.  Downstream Impact?  None.  Which Department is Owner?  Sales Ops.</description>
        <label>Product</label>
        <referenceTo>Product__c</referenceTo>
        <relationshipLabel>Solution Taxonomy Product Junctions</relationshipLabel>
        <relationshipName>Solution_Taxonomy_Product_Junctions</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Solution_Taxonomy__c</fullName>
        <description>What it does? Holds a link between a solution taxonomy and a product.. Downstream Impact? None. Which Department is Owner? Sales Ops.</description>
        <label>Solution Taxonomy</label>
        <referenceTo>Solution_Taxonomy__c</referenceTo>
        <relationshipLabel>Solution Taxonomy Product Junctions</relationshipLabel>
        <relationshipName>Solution_Taxonomy_Product_Junctions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Solution Taxonomy Product Junction</label>
    <nameField>
        <displayFormat>STPJ-{0000}</displayFormat>
        <label>Solution Taxonomy Product Junction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Solution Taxonomy Product Junctions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>